start move compilation and event services

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,5 +14,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>main-service</module>
+        <module>event_service</module>
+        <module>interaction-api</module>
     </modules>
 </project>
