--- a/core/event_service/src/main/resources/application-local.properties
+++ b/core/event_service/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./db/ewm-db
+spring.datasource.url=jdbc:h2:file:./db/ewm-event
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
