--- a/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
+++ b/infra/config-server/src/main/resources/config/infra/gateway-server/application.yaml
@@ -8,7 +8,7 @@ spring:
           predicates:
             - Path=/**
         - id: event_service_route
-          uri: lb://event-service
+          uri: lb://event_service
           predicates:
             - Path=/admin/compilations/**
             - Path=/compilations/**
